Added EditText and Button to MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,7 @@
     <string name="app_name">About Me</string>
     <string name="name">dereq</string>
     <string name="yellow_star">Yellow Star</string>
-    <string name="bio"> On March 18, 2014, Hough, along with his sister, Julianne, announced a summer tour of over 40 cities across the U.S. and Canada, called "Move Live on Tour", which would include dancing and singing from both of them, and the appearance of a group of dancers employed by the Houghs who were chosen through auditions.[22] They embarked on the sold out tour on May 25, 2014 in Park City, Kansas and ended it in Los Angeles on July 26, 2014. Due to the success of ticket sales and several sold out venues before the tour had officially kicked off, several more shows were added to the tour schedule, which also sold out.[23] For the tour choreography, the Hough siblings collaborated with Nappytabs.[24] On July 27, 2012, Hough announced that season 15 would be his last. A few months later, on February 22, 2013, Hough announced that he would be back for season 16, stating on his Twitter account, "Wasn’t sure if I was able to do this season because of my other projects, but worked it out so I can do both. #pumped.".[53] He was partnered with country singer and former American Idol contestant, Kellie Pickler.[54] On May 21, 2013, Pickler was crowned season 16 champion, marking the fourth time Derek won the Mirror Ball trophy, and made him the only pro to have won four Mirror Balls.[55]
-
-On August 2, 2013, Hough confirmed that he would be back for season 17 via an interview with Access Hollywood.[56] The cast for season 17 was announced on September 4, 2013. Hough's partner for season 17 was Glee star Amber Riley.[57][58] Riley was crowned season 17 champion, historically marking the fifth time Hough has won the Mirror Ball trophy, and made him once again the only pro to have won five Mirror Balls.[59]
-
-For season 18, Hough was paired with paralympic snowboarder, Amy Purdy.[60] In the finale on May 20, 2014, the couple was runner-up for the season, behind Meryl Davis and her partner Maksim Chmerkovskiy.[61]
-
-On August 13, 2014, ABC announced that Hough would be back for the season 19[62][63] and in September, it was announced that he would be paired with YouTube personality Bethany Mota.[64] The couple made it to the first night of the finals, finishing in fourth place.
-
-On February 24, 2015, Hough was announced as one of the returning professional dancers on season 20 despite previously reporting he would not be taking part in this season. He was partnered with gymnast Nastia Liukin.[65] They made it to the semi-finals, but were subsequently eliminated on May 12, finishing in fourth place.[66]
-
-For season 21, he was paired with wildlife conservationist and daughter of Steve Irwin, Bindi Irwin.[67] The couple made it to the finals and won the competition on November 24, 2015, marking Hough's sixth win on the show. Hough did not return for Season 22.</string>
+    <string name="bio"> On March 18, 2014, Hough, along with his sister, Julianne, announced a summer tour of over 40 cities across the U.S. and </string>
+    <string name="done">Done</string>
+    <string name="what_is_your_nickname">WHAT\'S YOUR NICKNAME?</string>
 </resources>
